# Otspot

./: .dockerignore  .gitattributes  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile.dev  LICENSE  LICENSE-APACHE  LICENSE-MIT  README.ja.md  README.md  abstract.md  abstract_gpgpu.md  abstract_linear.md  abstract_nonlinear.md  benchmarking.md  blue_ocean_analysis.md  commercial_solvers.md  cspell.json  debate_es_closing.md  debate_es_opening.md  debate_es_rebuttal.md  debate_go_closing.md  debate_go_opening.md  debate_go_rebuttal.md  debate_req_closing.md  debate_req_opening.md  debate_req_rebuttal.md  executive_summary.md  gpgpu_solvers.md  nonlinear_commercial_solvers.md  nonlinear_oss_solvers.md  oss_solvers.md  requirements.md  research_trends.md  subtask_plan.md  unified_strategy.md  winning_strategy.md
.claude/: settings.json
.config/: nextest.toml
.github/: dependabot.yml
benches/: lu_bench.rs  qp_bench.rs  scaling_pricing.rs  solve_bench.rs
docs/: architecture.md  iso-25010-quality-matrix.md  simplex-path-unification-plan.md  v053-competitive-analysis.md
examples/: bench_all_netlib.rs  clarabel_compare.rs  dump_problem.rs  solve_cbf.rs  solve_lp.rs  solve_qp.rs
otspot-core/: Cargo.toml
otspot-core/src/: architecture.rs  bench_utils.rs  error.rs  lib.rs  linalg.rs  lp.rs  options.rs  sensitivity.rs  test_kkt.rs  tolerances.rs
otspot-core/src/basis/: eta.rs  ft.rs  lu.rs  mod.rs  refactor.rs  test_utils.rs
otspot-core/src/conic/: cone.rs  equil.rs  ipm.rs  kkt.rs  misocp.rs  mod.rs  nonconvex.rs  qcqp.rs  tests.rs
otspot-core/src/io/: mod.rs  mps.rs  qplib.rs  qps.rs
otspot-core/src/linalg/: amd.rs  gershgorin.rs  kkt_solver.rs  ldl.rs  ldl_dd.rs  minres.rs  par_sentinel.rs  ruiz.rs  timeout.rs
otspot-core/src/mip/: branch.rs  conflict.rs  cut_pool.rs  cuts.rs  mod.rs  node.rs  presolve.rs  problem.rs  queue.rs  symmetry.rs  tests.rs
otspot-core/src/mip/cuts/: flow_cover.rs  knapsack_cover.rs  tests.rs
otspot-core/src/mip/heuristics/: feasibility_pump.rs  local_branching.rs  mod.rs  rens.rs  rins.rs
otspot-core/src/model/: constraint.rs  expression.rs  mod.rs
otspot-core/src/presolve/: activity.rs  mod.rs  postsolve.rs  qp_phase2.rs  qp_postsolve.rs  qp_transforms.rs  scaling.rs  transforms.rs  transforms_dup.rs
otspot-core/src/presolve/qp_transforms/: driver.rs  finalize.rs  helpers.rs  state.rs  steps_basic.rs  steps_bounds.rs  steps_free.rs  steps_parallel.rs  steps_redundancy.rs  tests.rs  tests_per_step.rs
otspot-core/src/presolve/transforms/: bounds.rs  doubleton.rs  driver.rs  empty_redundant.rs  fixed.rs  forcing.rs  free.rs  singleton.rs  state.rs  substitution.rs  tests.rs  tests_per_step.rs
otspot-core/src/problem/: certificate.rs  mod.rs
otspot-core/src/qp/: certificate.rs  kkt_resid.rs  linalg.rs  lp_dispatch.rs  mod.rs  multistart.rs  problem.rs  qcqp_route.rs  tests.rs
otspot-core/src/qp/global/: bound.rs  bound_alpha_bb.rs  bound_mccormick.rs  branch.rs  mod.rs  node.rs  pruning.rs  tree.rs
otspot-core/src/qp/ipm_core/: common.rs  ippmm.rs  kkt.rs  mod.rs  scaling.rs  solver_loop.rs
otspot-core/src/qp/ipm_core/ippmm/: factorize.rs  init.rs  iter.rs  state.rs  tests.rs  trace.rs  warm_start.rs
otspot-core/src/qp/ipm_solver/: attempt.rs  core.rs  kkt.rs  mod.rs  outcome.rs
otspot-core/src/qp/ipm_solver/core/: diagnostics.rs  duality_gap.rs  eps_tighten.rs  post_processing.rs  postsolve_dual.rs  warm_start.rs
otspot-core/src/qp/postsolve/: bound_dual.rs  dual_recovery.rs
otspot-core/src/qp/postsolve/postprocess/: compute_lsq.rs  dual_ir.rs  loop_.rs  mod.rs
otspot-core/src/qp/postsolve/refine/: lsq.rs  mod.rs  primal_lsq.rs  projected_gradient.rs  worst_active.rs
otspot-core/src/qp/postsolve/refine/kkt_iterative/: bound_refit.rs  extended.rs  iterative.rs  mod.rs
otspot-core/src/qp/tests/: api.rs  bound_duals.rs  dispatch.rs  dual_recovery.rs  dual_refit.rs  emptycol_skip.rs  micro_q_dispatch.rs  pfeas.rs  postsolve.rs  presolve.rs  psd_nonconvex.rs  qcqp_guard.rs  smoke.rs  status_dfeas.rs  validate_wiring.rs
otspot-core/src/simplex/: crash.rs  dual.rs  dual_common.rs  entry.rs  mod.rs  pricing.rs  primal.rs  standard_form.rs  tests.rs  tests_bounded_form.rs  tests_dual_advanced.rs  trace.rs
otspot-core/src/simplex/dual_advanced/: bound_flip.rs  bounded_core.rs  core.rs  dispatch.rs  mod.rs  phase1.rs  pipeline.rs  ratio_test.rs  steepest_edge.rs
otspot-core/src/simplex/dual_advanced/bounded_core/: extract.rs  iterate.rs  leaving.rs  mod.rs  pricing.rs  primal.rs  tests.rs
otspot-core/src/simplex/primal/: core.rs  crossover.rs  mod.rs  ratio_test.rs  reconcile.rs
otspot-core/src/sparse/: compress.rs  csc.rs  csr.rs  mod.rs  vec.rs
otspot-core/tests/: blackbox_lp.rs  blackbox_qp.rs  linalg_par_sentinel.rs  linalg_ruiz_integration.rs  memory_budget.rs
otspot-dev/: Cargo.toml
otspot-dev/src/: audit.rs  bench_utils.rs  lib.rs  screening.rs
otspot-dev/tests/: milp_solve_output.rs  qp_runner_input_errors.rs
otspot-io/: Cargo.toml
otspot-io/src/: lib.rs  mps.rs  qplib.rs  qps.rs  screening.rs
otspot-io/src/cbf/: bridge.rs  cone.rs  mod.rs  parser.rs  tests.rs  token_stream.rs
otspot-io/src/common/: mod.rs
otspot-io/src/mps/: mod.rs  parser.rs  types.rs
otspot-io/src/qplib/: mod.rs  parser.rs  token_stream.rs
otspot-io/src/qps/: mod.rs  parser.rs  types.rs
otspot-io/tests/: bug_repro.rs  cbf_cblib_integration.rs  israel_objective_mismatch.rs  presolve_correctness_sweep.rs  qplib_fixture.rs  qps_fixture.rs
otspot-ir/: Cargo.toml
otspot-model/: Cargo.toml
otspot-model/src/: constraint.rs  expression.rs  lib.rs  model.rs  quad_expr.rs  variable.rs
otspot-model/tests/: memory_budget.rs  mip_model.rs  qcqp_dsl_validation.rs
otspot-num/: Cargo.toml
python/: .gitignore  Cargo.toml  README.md  pyproject.toml
scripts/: README_lp_timeout_probe.md  baseline_from_bench_log.py  bench_mini.sh  bench_parallel.sh  cblib_download.sh  check_architecture.py  check_comment_block_size.sh  check_comment_ratio.sh  check_data_coverage.py  check_file_size.sh  cross_check_obj.py  (+44 more)
(+361 files in other folders)
