[workspace]
resolver = "2"
members = [".", "otspot-core", "otspot-io", "otspot-model", "otspot-dev"]

[workspace.package]
version = "0.2.0"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/hika019/otspot"
homepage = "https://github.com/hika019/otspot"

[workspace.dependencies]
otspot-core = { path = "otspot-core", version = "0.2.0" }
otspot-io = { path = "otspot-io", version = "0.2.0" }
otspot-model = { path = "otspot-model", version = "0.2.0" }

[package]
name = "otspot"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Mathematical optimization solver — LP (Revised Simplex) and QP (Interior Point / Mehrotra predictor-corrector)"
readme = "README.md"
keywords = ["linear-programming", "quadratic", "interior-point", "simplex", "optimization"]
categories = ["science", "algorithms", "mathematics"]

# crates.io 公開パッケージはライブラリのみ。data/ 等は .gitignore で自動除外。
# 追加で tracked の内部成果物 (bin / 統合テスト / benches / examples / scripts /
# インラインテスト / dev 設定) を除外する。
exclude = [
    "/src/bin",
    "/tests",
    "/benches",
    "/examples",
    "/scripts",
    "/data",
    "/.config",
    "/CLAUDE.md",
    "/Dockerfile.dev",
    "/.dockerignore",
    "/cspell.json",
    "otspot-core",
    "**/tests",
    "**/tests.rs",
    "**/tests_*.rs",
]

[features]
default = []
# `parallel` 機能フラグは後方互換のため残置 (no-op)。rayon は必須依存に昇格
# (#5 Phase 2 multi-start で常時 ThreadPool が必要)。
# 既存 `#[cfg(feature="parallel")]` 配下の heavy parallel テストは opt-in 維持。
parallel = ["otspot-core/parallel"]

[dependencies]
otspot-core = { workspace = true }
otspot-io = { workspace = true }
otspot-model = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.10.0"
clarabel = "0.11"
tempfile = "3"
faer = "0.24.0"
dyn-stack = "0.13.2"
twofloat = "0.8"
otspot-dev = { path = "otspot-dev" }

[[bench]]
name = "scaling_pricing"
harness = false

[[bench]]
name = "lu_bench"
harness = false

[[bench]]
name = "solve_bench"
harness = false

[[bench]]
name = "qp_bench"
harness = false

[profile.test]
opt-level = 3
