[workspace]
resolver = "2"
members = [".", "otspot-core", "otspot-io", "otspot-model", "otspot-dev"]
default-members = [".", "otspot-core", "otspot-io", "otspot-model", "otspot-dev"]

[workspace.package]
version = "0.3.0"
edition = "2021"
license = "AGPL-3.0-only"
repository = "https://github.com/hika019/otspot"
homepage = "https://github.com/hika019/otspot"

[workspace.dependencies]
otspot-core = { path = "otspot-core", version = "0.3.0" }
otspot-io = { path = "otspot-io", version = "0.3.0" }
otspot-model = { path = "otspot-model", version = "0.3.0" }

[package]
name = "otspot"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Mathematical optimization solver — LP (Revised Simplex) and QP (Interior Point / Mehrotra predictor-corrector)"
readme = "README.md"
keywords = ["linear-programming", "quadratic", "interior-point", "simplex", "optimization"]
categories = ["science", "algorithms", "mathematics"]

# Exclude: internal integration tests (depend on otspot-dev path dep + private data),
# workspace sub-crates (published separately), dev configs, and private data.
# bench_all_netlib references tests/netlib/*.mps (excluded), so it is excluded
# to prevent runtime panics for crates.io users.
exclude = [
    "/src/bin",
    "/tests",
    "/examples/bench_all_netlib.rs",
    "/scripts",
    "/data",
    "/.config",
    "/CLAUDE.md",
    "/Dockerfile.dev",
    "/.dockerignore",
    "/cspell.json",
    "otspot-core",
    "**/tests",
    "**/tests.rs",
    "**/tests_*.rs",
]

[features]
default = []
# `parallel` gates opt-in concurrent tests in otspot-core (rayon is a hard dep;
# enabling this feature does not change runtime behavior, only test coverage).
parallel = ["otspot-core/parallel"]

[dependencies]
otspot-core = { workspace = true }
otspot-io = { workspace = true }
otspot-model = { workspace = true }

[dev-dependencies]
proptest = "1.10.0"
clarabel = "0.11"
faer = "0.24.0"
dyn-stack = "0.13.2"
twofloat = "0.8"
otspot-dev = { path = "otspot-dev" }

[profile.test]
opt-level = 3
