[package]
name = "otspot-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core implementation for otspot (LP/QP/MIP solver) — published as a dependency of the otspot facade"
repository.workspace = true
homepage.workspace = true

[features]
default = []
# `parallel` enables opt-in concurrent tests (rayon is a hard dep; enabling this
# feature does not change runtime behavior, only test coverage).
parallel = []

[dependencies]
faer = "0.24.0"
log = "0.4"
rayon = "1"
twofloat = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

