[package]
name = "otspot-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core implementation for otspot (LP/QP/MIP solver) — published as a dependency of the otspot facade"
repository.workspace = true
homepage.workspace = true

[features]
default = []
# `parallel` enables opt-in concurrent tests (rayon is a hard dep; enabling this
# feature does not change runtime behavior, only test coverage).
parallel = []

[dependencies]
faer = "0.24.0"
log = "0.4"
mimalloc = { version = "0.1", default-features = false }
rayon = "1"
twofloat = "0.8"

[dev-dependencies]
proptest = "1.10.0"
clarabel = "0.11"
tempfile = "3"

