[package]
name = "otspot-dev"
version = "0.1.0"
edition = "2021"
publish = false
description = "Dev/test utilities for otspot — not part of the public API"

[dependencies]
otspot-core = { path = "../otspot-core", version = "0.1.1" }
otspot-io = { path = "../otspot-io" }

[dev-dependencies]
tempfile = "3"
