[package]
name = "otspot-dev"
version = "0.1.0"
edition = "2021"
publish = false
description = "Dev/test utilities for otspot — not part of the public API"

[dependencies]
otspot-core = { path = "../otspot-core", version = "0.1.1" }
otspot-io = { path = "../otspot-io" }
mimalloc = { version = "0.1", default-features = false }
twofloat = "0.8"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "bench_qplib"
path = "src/bin/bench_qplib.rs"

[[bin]]
name = "qps_benchmark"
path = "src/bin/qps_benchmark.rs"

[[bin]]
name = "lp_screen"
path = "src/bin/lp_screen.rs"

[[bin]]
name = "milp_solve"
path = "src/bin/milp_solve.rs"

[[bin]]
name = "mip_speed_bench"
path = "src/bin/mip_speed_bench/main.rs"

[[bin]]
name = "qp_diag"
path = "src/bin/qp_diag.rs"

[[bin]]
name = "qp_dump"
path = "src/bin/qp_dump.rs"

[[bin]]
name = "qp_runner"
path = "src/bin/qp_runner.rs"

[[bin]]
name = "verify_solutions"
path = "src/bin/verify_solutions.rs"
