[package]
name = "otspot-model"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Algebraic modeling API for otspot (Model, Variable, Expression, Constraint)"
repository.workspace = true
homepage.workspace = true

[dependencies]
otspot-core = { workspace = true }

